[ENTESB-20663] Ignore ShellCommandSecurityTest on JDK17